--- a/app_server/views/_includes/sharedHTMLfunctions.jade
+++ b/app_server/views/_includes/sharedHTMLfunctions.jade
@@ -6,3 +6,13 @@ mixin outputRating(rating)
 
 mixin renderMap(lat, lng)
   img.img-responsive.img-rounded(src='http://maps.googleapis.com/maps/api/staticmap?center=#{lat},#{lng}&zoom=17&size=400x350&sensor=false&markers=#{lat},#{lng}&scale=2')
+
+mixin formatDate(dateString)
+  - var date = new Date(dateString);
+  - var monthNames = [ 'January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December' ];
+  - var d = date.getDate();
+  - var m = monthNames[date.getMonth()];
+  - var y = date.getFullYear();
+  - var output = m + ' ' + d + ', ' + y;
+
+  =output
