--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -44,7 +44,7 @@ block content
         .col-xs-12
           .panel.panel-primary.review-panel
             .panel-heading
-              a.btn.btn-default.pull-right(href='/location/review/new') Add review
+              a.btn.btn-default.btn-xs.pull-right(href="/location/#{location._id}/reviews/new") Add review
               h2.panel-title Customer reviews
             .panel-body.review-container
               each review in location.reviews
@@ -53,10 +53,11 @@ block content
                     .well.well-sm.review-header
                       span.rating
                         +outputRating(review.rating)
-                      span.review-author= review.author
-                      small.review-timestamp= review.timestamp
+                      span.review-author= review.author.displayName
+                      small.review-timestamp
+                        +formatDate(review.createdOn)
                     .col-xs-12
-                      p !{(review.comment).replace(/\n/g, '<br/>')}
+                      p !{(review.reviewText).replace(/\n/g, '<br/>')}
 
     .col-xs-12.col-md-3
       p.lead #{location.name} #{sidebar.context}
