--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html
+html(ng-app='loc8rApp')
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
@@ -30,5 +30,7 @@ html
           .col-xs-12
             small &copy; Marius Butuc 2014
 
+    script(src='/angular/angular.min.js')
+    script(src='/angular/loc8r.app.js')
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
