Turn it into a SPA using Angular

--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -23,7 +23,8 @@ html(ng-app='loc8rApp')
               a(href='/signin/') Sign In
 
     .container
-      block content
+      div(ng-view)
+        block content
 
       footer
         .row
@@ -31,6 +32,12 @@ html(ng-app='loc8rApp')
             small &copy; Marius Butuc 2014
 
     script(src='/angular/angular.min.js')
-    script(src='/angular/loc8r.app.js')
+    script(src='/lib/angular-route.min.js')
+    script(src='/app.js')
+    script(src='/home/home.controller.js')
+    script(src='/common/directives/ratingStars/ratingStars.directive.js')
+    script(src='/common/filters/formatDistance.filter.js')
+    script(src='/common/services/loc8rData.service.js')
+    script(src='/common/services/geolocation.service.js')
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
